--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,12 @@ body{
   color: white;
 }
 
+html{
+  ::-webkit-scrollbar {
+    display: none;
+  }
+}
+
 .container{
   width: 90vw;
   height: 90vh;
